<resources>
    <string name="app_name">RegisterApp</string>
    <string name="text_register_set_fullname">Full Name</string>
    <string name="text_register_set_username">Username</string>
    <string name="text_register_set_email">Email</string>
    <string name="text_register_set_password">Password</string>
    <string name="text_register_set_retype_password">Re-type Password</string>
    <string name="text_register_choice_gender">Gender</string>
    <string name="text_register_choice_female">Female</string>
    <string name="text_register_choice_male">Male</string>
    <string name="text_button_register">Register</string>
    <string name="text_button_showinfo">Show Info</string>
    <string name="text_button_hideinfo">Hide Info</string>
</resources>